syntax = "proto3";

package mcp.extension;

option java_multiple_files = true;
option java_package = "com.aseubel.yusi.grpc.mcp";
option java_outer_classname = "McpExtensionProto";
option go_package = "mcp/proto";

service McpExtensionService {
  // Searches diaries by keyword and time range
  rpc SearchDiary(SearchDiaryRequest) returns (SearchDiaryResponse) {}
  
  // Searches memories including mid-term memories and short-term conversation context
  rpc SearchMemory(SearchMemoryRequest) returns (SearchMemoryResponse) {}
}

message SearchDiaryRequest {
  string api_key = 1;
  string keyword = 2;
  // Format: yyyy-MM-dd HH:mm:ss. Can be empty.
  string start_time = 3;
  // Format: yyyy-MM-dd HH:mm:ss. Can be empty.
  string end_time = 4;
}

message SearchDiaryResponse {
  repeated DiaryResult results = 1;
  string error_message = 2;
}

message DiaryResult {
  string diary_id = 1;
  string date = 2;
  string content = 3;
  string emotion = 4;
}

message SearchMemoryRequest {
  string api_key = 1;
  string query = 2;
  int32 max_results = 3;
}

message SearchMemoryResponse {
  repeated MemoryResult results = 1;
  string error_message = 2;
}

message MemoryResult {
  string type = 1;  // MID_TERM_MEMORY or SHORT_TERM_CONTEXT
  string content = 2;
  string source_id = 3;  // memory id or message id
  double score = 4;      // relevance score
  string created_at = 5; // creation time
}
